Add DTOs for dossierMedical services, fix schema.sql order and syntax, add test seed data, fix null handling in RowMappers, and improve test stability with Thread.sleep